--- a/WebContent/signin.html
+++ b/WebContent/signin.html
@@ -47,7 +47,7 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input id="inputPassword" class="form-control" placeholder="Password" required="" type="password">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a class="btn btn-lg btn-primary btn-block" href="register.html">Register</a>
+        <a class="btn btn-lg btn-primary btn-block" href="signup.jsp">Create account</a>
       </form>
 
     </div> <!-- /container -->
