--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -75,7 +75,7 @@
             <div class="carousel-caption">
               <h1>Fancy Cacti, the words premier cacti shop!</h1>
               <p>Note: If you're viewing this page via a URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="register.html" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="signup.jsp" role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
