product html fixes

--- a/WebContent/products.html
+++ b/WebContent/products.html
@@ -66,30 +66,31 @@
 
 		</div>
 	</div>
-	<div id="wrapper">
-		<div class="overlay"></div>
+	<li>
+		<div id="wrapper">
+			<div class="overlay"></div>
 
-		<!-- Sidebar -->
-		<nav class="navbar navbar-inverse navbar-fixed-top"
-			id="sidebar-wrapper" role="navigation">
-			<ul class="nav sidebar-nav">
-				<li class="sidebar-brand"><a href="#"> Categories: </a></li>
-				<li></li>
-			</ul>
-		</nav>
+			<!-- Sidebar -->
+			<nav class="navbar navbar-inverse navbar-fixed-top"
+				id="sidebar-wrapper" role="navigation">
+				<ul class="nav sidebar-nav">
+					<li class="sidebar-brand"><a href="#"> Categories: </a></li>
+					<li></li>
+				</ul>
+			</nav>
 
-		<form class="navbar-form" role="search">
-			<div class="input-group">
-				<input type="text" class="form-control" placeholder="Search"
-					name="srch-term" id="srch-term">
-				<div class="input-group-btn">
-					<button class="btn btn-default" type="submit">
-						<i class="glyphicon glyphicon-search"></i>
-					</button>
+			<form class="navbar-form" role="search">
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Search"
+						name="srch-term" id="srch-term">
+					<div class="input-group-btn">
+						<button class="btn btn-default" type="submit">
+							<i class="glyphicon glyphicon-search"></i>
+						</button>
+					</div>
 				</div>
-			</div>
-		</form>
-	</div>
+			</form>
+		</div>
 	</li>
 	<li><a href="#"><i class="fa fa-fw fa-home"></i> All Products</a>
 	</li>
@@ -98,20 +99,20 @@
 	<li><a href="#"><i class="fa fa-fw fa-file-o"></i> Accessories</a>
 	</li>
 
-	<li class="dropdown"><a href="#" class="dropdown-toggle"
-		data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> Cacti <span
-			class="caret"></span></a>
-		<ul class="dropdown-menu" role="menu">
-			<li class="dropdown-header">Types of Cacti</li>
-			<li><a href="#">Action</a></li>
-			<li><a href="#">Another action</a></li>
-			<li><a href="#">Something else here</a></li>
-			<li><a href="#">Separated link</a></li>
-			<li><a href="#">One more separated link</a></li>
-		</ul></li>
-
+	<ul>
+		<li class="dropdown"><a href="#" class="dropdown-toggle"
+			data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> Cacti <span
+				class="caret"></span></a>
+			<ul class="dropdown-menu" role="menu">
+				<li class="dropdown-header">Types of Cacti</li>
+				<li><a href="#">Action</a></li>
+				<li><a href="#">Another action</a></li>
+				<li><a href="#">Something else here</a></li>
+				<li><a href="#">Separated link</a></li>
+				<li><a href="#">One more separated link</a></li>
+			</ul></li>
 	</ul>
-	</nav>
+	<nav></nav>
 	<!-- /#sidebar-wrapper -->
 
 	<!-- Page Content -->
@@ -121,137 +122,137 @@
 			<span class="hamb-top"></span> <span class="hamb-middle"></span> <span
 				class="hamb-bottom"></span>
 		</button>
+	</div>
 
 
 
 
 
-
-		<!-- Marketing messaging and featurettes
+	<!-- Marketing messaging and featurettes
     ================================================== -->
-		<!-- Wrap the rest of the page in another container to center all the content. -->
-		<div class="container">
-			<div class="container marketing">
+	<!-- Wrap the rest of the page in another container to center all the content. -->
+	<div class="container">
+		<div class="container marketing">
 
-				<!-- START THE FEATURETTES -->
+			<!-- START THE FEATURETTES -->
 
-				<hr class="featurette-divider">
+			<hr class="featurette-divider">
 
-				<div class="row featurette">
-					<div class="col-md-7">
-						<h2 class="featurette-heading">
-							PULL THE PRODUCT NAME AND PUT IT HERE <span class="text-muted">PUT
-								THE PRICE HERE</span>
-						</h2>
-						<p class="lead">
-						<form>
-							<div class="form-group">
-								<label class="radio-inline"> <input type="radio"
-									name="inlineRadioOptions" id="inlineRadio1" value="option1">
-									1
-								</label> <label class="radio-inline"> <input type="radio"
-									name="inlineRadioOptions" id="inlineRadio2" value="option2">
-									2
-								</label> <label class="radio-inline"> <input type="radio"
-									name="inlineRadioOptions" id="inlineRadio3" value="option3">
-									3
-								</label> <label class="radio-inline"> <input type="radio"
-									name="inlineRadioOptions" id="inlineRadio4" value="option4">
-									4
-								</label> <label class="radio-inline"> <input type="radio"
-									name="inlineRadioOptions" id="inlineRadio5" value="option5">
-									5
-								</label>
-							</div>
-							<div class="form-group">
-								<textarea class="form-control" inputtype="text" rows="1"></textarea>
-							</div>
+			<div class="row featurette">
+				<div class="col-md-7">
+					<h2 class="featurette-heading">
+						PULL THE PRODUCT NAME AND PUT IT HERE <span class="text-muted">PUT
+							THE PRICE HERE</span>
+					</h2>
+					<p class="lead">
+					<form>
+						<div class="form-group">
+							<label class="radio-inline"> <input type="radio"
+								name="inlineRadioOptions" id="inlineRadio1" value="option1">
+								1
+							</label> <label class="radio-inline"> <input type="radio"
+								name="inlineRadioOptions" id="inlineRadio2" value="option2">
+								2
+							</label> <label class="radio-inline"> <input type="radio"
+								name="inlineRadioOptions" id="inlineRadio3" value="option3">
+								3
+							</label> <label class="radio-inline"> <input type="radio"
+								name="inlineRadioOptions" id="inlineRadio4" value="option4">
+								4
+							</label> <label class="radio-inline"> <input type="radio"
+								name="inlineRadioOptions" id="inlineRadio5" value="option5">
+								5
+							</label>
+						</div>
+						<div class="form-group">
+							<textarea class="form-control" inputtype="text" rows="1"></textarea>
+						</div>
 
-							<button type="submit" class="btn btn-primary">Submit
-								Review</button>
-						</form>
-						<br> Put all of the other product info here!
-						</p>
-					</div>
-					<div class="col-md-5">
-						<img class="featurette-image img-responsive center-block"
-							src="PUT THE IMAGE SOURCE HERE" alt="Image Failed to Load">
-					</div>
+						<button type="submit" class="btn btn-primary">Submit
+							Review</button>
+					</form>
+					<br> Put all of the other product info here!
+					</p>
 				</div>
-
-				<hr class="featurette-divider">
-
-				<div class="row featurette">
-					<div class="col-md-7 col-md-push-5">
-						<h2 class="featurette-heading">
-							Oh yeah, it's that good. <span class="text-muted">See for
-								yourself.</span>
-						</h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor
-							fringilla. Vestibulum id ligula porta felis euismod semper.
-							Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-							Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5 col-md-pull-7">
-						<img class="featurette-image img-responsive center-block"
-							data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-					</div>
+				<div class="col-md-5">
+					<img class="featurette-image img-responsive center-block"
+						src="PUT THE IMAGE SOURCE HERE" alt="Image Failed to Load">
 				</div>
-
-				<hr class="featurette-divider">
-
-				<div class="row featurette">
-					<div class="col-md-7">
-						<h2 class="featurette-heading">
-							And lastly, this one. <span class="text-muted">Checkmate.</span>
-						</h2>
-						<p class="lead">Donec ullamcorper nulla non metus auctor
-							fringilla. Vestibulum id ligula porta felis euismod semper.
-							Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-							Fusce dapibus, tellus ac cursus commodo.</p>
-					</div>
-					<div class="col-md-5">
-						<img class="featurette-image img-responsive center-block"
-							data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-					</div>
-				</div>
-
-				<hr class="featurette-divider">
-
-				<!-- /END THE FEATURETTES -->
-
 			</div>
-			<!-- /#page-content-wrapper -->
 
-			<!-- FOOTER -->
-			<footer>
-				<p class="pull-right">
-					<a href="#">Back to top</a>
-				</p>
-				<p>
-					&copy; 2016 Fancy Cacti, Inc. &middot; <a href="privacy.html">Privacy</a>
-					&middot; <a href="terms.html">Terms</a>
-				</p>
-			</footer>
+			<hr class="featurette-divider">
+
+			<div class="row featurette">
+				<div class="col-md-7 col-md-push-5">
+					<h2 class="featurette-heading">
+						Oh yeah, it's that good. <span class="text-muted">See for
+							yourself.</span>
+					</h2>
+					<p class="lead">Donec ullamcorper nulla non metus auctor
+						fringilla. Vestibulum id ligula porta felis euismod semper.
+						Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+						Fusce dapibus, tellus ac cursus commodo.</p>
+				</div>
+				<div class="col-md-5 col-md-pull-7">
+					<img class="featurette-image img-responsive center-block"
+						data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<div class="row featurette">
+				<div class="col-md-7">
+					<h2 class="featurette-heading">
+						And lastly, this one. <span class="text-muted">Checkmate.</span>
+					</h2>
+					<p class="lead">Donec ullamcorper nulla non metus auctor
+						fringilla. Vestibulum id ligula porta felis euismod semper.
+						Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+						Fusce dapibus, tellus ac cursus commodo.</p>
+				</div>
+				<div class="col-md-5">
+					<img class="featurette-image img-responsive center-block"
+						data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+				</div>
+			</div>
+
+			<hr class="featurette-divider">
+
+			<!-- /END THE FEATURETTES -->
 
 		</div>
-		<!-- /.container -->
+		<!-- /#page-content-wrapper -->
 
+		<!-- FOOTER -->
+		<footer>
+			<p class="pull-right">
+				<a href="#">Back to top</a>
+			</p>
+			<p>
+				&copy; 2016 Fancy Cacti, Inc. &middot; <a href="privacy.html">Privacy</a>
+				&middot; <a href="terms.html">Terms</a>
+			</p>
+		</footer>
 
-		<!-- Bootstrap core JavaScript
+	</div>
+	<!-- /.container -->
+	
+
+	<!-- Bootstrap core JavaScript
     ================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script
-			src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script>
-			window.jQuery
-					|| document
-							.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
-		</script>
-		<script src="js/bootstrap.min.js"></script>
-		<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-		<script src="js/vendor/holder.min.js"></script>
-		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-		<script src="js/ie10-viewport-bug-workaround.js"></script>
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script>
+		window.jQuery
+				|| document
+						.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+	</script>
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+	<script src="js/vendor/holder.min.js"></script>
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script src="js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
