--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -48,8 +48,9 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#contact.html">Contact</a></li>
-            <li><a href="#products.html">Products</a></li>
-            <li><a href="#products.html">Plant Care</a></li>
+            <li><a href="#products.jsp">Products</a></li>
+            <li><a href="#products.jsp">Plant Care</a></li>
+          </ul>
         </div><!--/.nav-collapse -->
 
       </div>
