--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,9 +47,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#contact.html">Contact</a></li>
-            <li><a href="#products.jsp">Products</a></li>
-            <li><a href="#products.jsp">Plant Care</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="products.jsp">Products</a></li>
+            <li><a href="products.jsp">Plant Care</a></li>
           </ul>
         </div><!--/.nav-collapse -->
 
