Fixed HTMl, Added img folder to gitignore, Finished index and about pages.

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -7,9 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="img/fav/favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-    <div class="navbar-wrapper">
+      <div class="navbar-wrapper">
       <div class="container">
 
    <!-- Fixed navbar -->
@@ -47,9 +47,8 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="care.html">Plant Care</a></li>
+            <li><a href="products.jsp">Products</a></li>
+            <li><a href="pcare.html">Plant Care</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             <a href="checkout.html" class="btn btn-default navbar-btn">
@@ -65,7 +64,6 @@
 
       </div>
     </div>
-
     <!-- Marketing messaging and featurettes
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
@@ -78,11 +76,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">State of the Art -<span class="text-muted"> Growing conditions tailored beyond belief.</span></h2>
+          <p class="lead">Fancy Cacti has one of the worlds most advanced greenhouses. Everything is tightly controlled to ensure your plant is in tip top condition. We manage temperature, humidity, light levels, nutrient levels and more. Our staff includes some of the worlds best horticulturalists, pedologist and, edaphologists.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/about1.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -90,11 +88,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Global - <span class="text-muted">Fancy Cacti ships to over 100 countries. </span></h2>
+          <p class="lead">Fancy Cacti has developed a proprietary shipping container to allow the transporation of cacti across continenets. We are constantly adding new countries as we get clearance to import plants. If your country is not supported send us an email and we will let you know when shipping is available.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/about2.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -102,11 +100,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Tailored - <span class="text-muted">Fancy Cacti is at the forefront of genetic engineering.</span></h2>
+          <p class="lead">At Fancy Cacti we can tailor cacti to your every want and need. Thanks yo the latest genetic engineering technologies such as CRISPR. We can modify your cacti to be a specific color, we can adapt it to environmental conditions and we can even add bioluminescence. </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/about3.png" alt="Generic placeholder image">
         </div>
       </div>
 
