--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,9 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="img/fav/favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Fancy Cacti</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
     <div class="navbar-wrapper">
       <div class="container">
 
-   <!-- Fixed navbar -->
+  <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -47,10 +47,16 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
             <li><a href="products.jsp">Products</a></li>
-            <li><a href="products.jsp">Plant Care</a></li>
+            <li><a href="pcare.html">Plant Care</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+            <a href="checkout.html" class="btn btn-default navbar-btn">
+          <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart 
+          </a>
+
           </ul>
+        
         </div><!--/.nav-collapse -->
 
       </div>
@@ -74,8 +80,8 @@
           <img class="first-slide" src="img/car1.png" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Fancy Cacti, the words premier cacti shop!</h1>
-              <p>Note: If you're viewing this page via a URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
+              <h1>Fancy Cacti, the world's premier cacti shop!</h1>
+              <p>An exclusive cacti and succulent store, Fancy Cacti is members only. Join us today for exclusive access to the fanciest of cacti. </p>
               <p><a class="btn btn-lg btn-primary" href="signup.jsp" role="button">Sign up today</a></p>
             </div>
           </div>
@@ -84,8 +90,8 @@
           <img class="second-slide" src="img/car2.png" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Fancy Cacti, an industry leader.</h1>
+              <p>With days of experience in cacti horticulture, Fancy Cacti is an industry leader in innovation and other buzzwords. We have been In operation since November 2016. </p>
               <p><a class="btn btn-lg btn-primary" href="about.html" role="button">Learn more</a></p>
             </div>
           </div>
@@ -94,8 +100,8 @@
           <img class="third-slide" src="img/car3.png" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Fancy Cacti, a shop with a huge selection of plants and plant products.</h1>
+              <p>Fancy Cacti offers a wide variety of products and accessories for all your growing needs. We have fertilizer, decorations, cacti and, more!. </p>
               <p><a class="btn btn-lg btn-primary" href="products.html" role="button">Browse Products</a></p>
             </div>
           </div>
@@ -121,21 +127,22 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="img/p1.png" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="img/plant1.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Succulents</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p>Succulents, also known as "Fat Plants" are beloved for their unusual appreance and ease of care. The word succulent comes from the latin word sucus, which means juice or sap. Some succulents such as Aloe have medicinal properties and can be used as improvized burn treatment.
+</p>
           <p><a class="btn btn-default" href="products.html" role="button">Shop &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="img/fclogo.png" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="img/plant2.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Plant Care</h2>
           <p>Most species of cactus require minimal care but there are things you can do to keep your cactus extra healthy! Keep your cactus in a window with plenty of sunlight, ideally south facing if possible. Keep the temperature in a range of 19 to 32 degrees celsius during the summer. </p>
           <p><a class="btn btn-default" href="about.html" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="img/cac1.png" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="img/plant3.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Cacti</h2>
-          <p>Did you know that there are about 1750 known cacti species?</p>
+          <p>Did you know that there are about 1750 known cacti species? Cacti have many adaptations to conserve water. Many cacti are succulents which means they have thick fleshy parts designed to store water. Cacti spines are modified leaves which protect against predators and restrict airflow to keep the cactus cool. </p>
           <p><a class="btn btn-default" href="products" role="button">Shop &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
