--- a/WebContent/signin.html
+++ b/WebContent/signin.html
@@ -14,7 +14,7 @@
 :root #content > #center > .dose > .dosesingle
 { display: none !important; }</style>
 
-    <title>Signin Template for Bootstrap</title>
+    <title>Signin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
