Fixed the index links, changed ddl, fixed products
J-MONEY FUCKING WROTE PNG IN THE DDL FIXED THAT SHIT. Also the index
links went nowhere. Product now list img/ before the call on the image

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -51,7 +51,7 @@
             <li><a href="pcare.html">Plant Care</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-            <a href="checkout.html" class="btn btn-default navbar-btn">
+            <a href="checkout.jsp" class="btn btn-default navbar-btn">
           <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart 
           </a>
 
@@ -131,7 +131,7 @@
           <h2>Succulents</h2>
           <p>Succulents, also known as "Fat Plants" are beloved for their unusual appreance and ease of care. The word succulent comes from the latin word sucus, which means juice or sap. Some succulents such as Aloe have medicinal properties and can be used as improvized burn treatment.
 </p>
-          <p><a class="btn btn-default" href="products.html" role="button">Shop &raquo;</a></p>
+          <p><a class="btn btn-default" href="products.jsp" role="button">Shop &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="img/plant2.png" alt="Generic placeholder image" width="140" height="140">
@@ -143,7 +143,7 @@
           <img class="img-circle" src="img/plant3.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Cacti</h2>
           <p>Did you know that there are about 1750 known cacti species? Cacti have many adaptations to conserve water. Many cacti are succulents which means they have thick fleshy parts designed to store water. Cacti spines are modified leaves which protect against predators and restrict airflow to keep the cactus cool. </p>
-          <p><a class="btn btn-default" href="products" role="button">Shop &raquo;</a></p>
+          <p><a class="btn btn-default" href="products.jsp" role="button">Shop &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
