--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -93,7 +93,7 @@
             <div class="carousel-caption">
               <h1>Fancy Cacti, the world's premier cacti shop!</h1>
               <p>An exclusive cacti and succulent store, Fancy Cacti is members only. Join us today for exclusive access to the fanciest of cacti. </p>
-              <p><a class="btn btn-lg btn-primary" href="signup.jsp" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="signup2.jsp" role="button">Sign up today</a></p>
             </div>
           </div>
         </div>
