more product changes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -138,11 +138,11 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="img/plant1.png" alt="Generic placeholder image" width="140" height="140">
-          <h2>Succulents</h2>
-          <p>Succulents, also known as "Fat Plants" are beloved for their unusual appreance and ease of care. The word succulent comes from the latin word sucus, which means juice or sap. Some succulents such as Aloe have medicinal properties and can be used as improvized burn treatment.
+          <img class="img-circle" src="img/bow1.png" alt="Generic placeholder image" width="140" height="140">
+          <h2>Accessories</h2>
+          <p>Do you want your cacti to look as fancy as ours? Do you think cactis look cool with hats? Checkout the accessories we have in stock and dress up your cacti in the accessory of your choice! Let your cacti's inner personality out :)
 </p>
-          <p><a class="btn btn-default" href="products.jsp" role="button">Shop &raquo;</a></p>
+          <p><a class="btn btn-default" href="products.jsp?category=AC" role="button">Shop &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="img/plant2.png" alt="Generic placeholder image" width="140" height="140">
