STAFF PAGES WORK :D

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -140,7 +140,7 @@
         <div class="col-lg-4">
           <img class="img-circle" src="img/bow1.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Accessories</h2>
-          <p>Do you want your cacti to look as fancy as ours? Do you think cactis look cool with hats? Checkout the accessories we have in stock and dress up your cacti in the accessory of your choice! Let your cacti's inner personality out :)
+          <p>Do you want your cacti to look as fancy as ours? Do you think cactis look cool with hats? Checkout the accessories we have in stock and dress up your cacti in the accessory of your choice! If you cannot find one you like send us an emailLet your cacti's inner personality out :)
 </p>
           <p><a class="btn btn-default" href="products.jsp?category=AC" role="button">Shop &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
