Added the Privacy Policy page and changed the footer link from terms to Legal.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -164,7 +164,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2016 Fancy Cacti, Inc. &middot; <a href="privacy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
+        <p>&copy; 2016 Fancy Cacti, Inc. &middot; <a href="privacy.html">Privacy</a> &middot; <a href="legal.html">Legal</a></p>
       </footer>
 
     </div><!-- /.container -->
