fixed all of Kyla's mistakes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -113,7 +113,7 @@
             <div class="carousel-caption">
               <h1>Fancy Cacti, a shop with a huge selection of plants and plant products.</h1>
               <p>Fancy Cacti offers a wide variety of products and accessories for all your growing needs. We have fertilizer, decorations, cacti and, more!. </p>
-              <p><a class="btn btn-lg btn-primary" href="products.html" role="button">Browse Products</a></p>
+              <p><a class="btn btn-lg btn-primary" href="products.jsp" role="button">Browse Products</a></p>
             </div>
           </div>
         </div>
