--- a/WebContent/privacy.html
+++ b/WebContent/privacy.html
@@ -59,7 +59,8 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About</a></li>
             <li><a href="products.jsp">Products</a></li>
-            <li><a href="pcare.html">Plant Care</a></li>
+            <li><a href="staff.html">Staff</a></li>
+            <li><a href="showorder-login.jsp">Purchases</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             <a href="checkout.html" class="btn btn-default navbar-btn">
