changed index page

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -141,13 +141,13 @@
         <div class="col-lg-4">
           <img class="img-circle" src="img/bow1.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Accessories</h2>
-          <p>Do you want your cacti to look as fancy as ours? Do you think cactis look cool with hats? Checkout the accessories we have in stock and dress up your cacti in the accessory of your choice! If you cannot find one you like send us an emailLet your cacti's inner personality out :)
+          <p>Do you want your cacti to look as fancy as ours? Do you think cactis look cool with hats? Checkout the accessories we have in stock and dress up your cacti in the accessory of your choice! If you cannot find one you like send us an email! Let your cacti's inner personality out :)
 </p>
           <p><a class="btn btn-default" href="products.jsp?category=AC" role="button">Shop &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="img/plant2.png" alt="Generic placeholder image" width="140" height="140">
-          <h2>Plant Care</h2>
+          <h2>About Us and the Plants</h2>
           <p>Most species of cactus require minimal care but there are things you can do to keep your cactus extra healthy! Keep your cactus in a window with plenty of sunlight, ideally south facing if possible. Keep the temperature in a range of 19 to 32 degrees celsius during the summer. </p>
           <p><a class="btn btn-default" href="about.html" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
